feat: add encryption rotation status
